--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@sanity/webhook": "^4.0.1",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-sanity": "^7.0.15",
