--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@portabletext/react": "^3.0.11",
     "@sanity/webhook": "^4.0.1",
     "lucide-react": "^0.316.0",
     "next": "14.1.0",
     "next-sanity": "^7.0.15",
     "react": "^18",
     "react-dom": "^18",
-    "sanity": "^3.26.1"
+    "sanity": "^3.26.1",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
